fix: alignment

--- a/jsassignment/style.css
+++ b/jsassignment/style.css
@@ -38,12 +38,25 @@ body{
     left: 10px ;
 }
 
+#d3{
+    border: 2px solid black;
+    width: 30%;
+    height: 400px;
+    position: relative;
+    margin: 50px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;}
 
 #tglbtn{
     position: absolute;
+    bottom: 10px;
+    /* left: 200px; */
 }
 
 #image2{
     visibility: hidden;
+    width: 90%;
+    height: 80%;
 }
 
